# -BioSim_G01_Helge_Julius

./: .gitignore  Island.rst  README.md  conf.py  index.rst  requirements.txt  setup.cfg  test_animals.rst  test_island.rst  tox.ini
Exam/: errors.txt
doc/: animals.rst  conf.py  index.rst  landscape.rst  simulation.rst  testisland.rst  testlandscape.rst  testsimulation.rst
examples/: Rossumoya.py  best_island.py  check_sim.py  check_sim_long.py  check_sim_one_square.py  check_sim_only_jungle.py  make_movie.py  map_test.py  migration_only.py
src/biosim/: __init__.py  animals.py  island.py  landscape.py  simulation.py
tests/: test_animals.py  test_biosim_interface.py  test_island.py  test_landscape.py  test_simulation.py
