[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Helge Helø Klemetsdal & Adam Julius Olof Kviman
author_email = hege.helo.klemetsdal@nmbu.no & juliukvi@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas
    textwrap
    shutil

[options.packages.find]
where=src